code/RefManageR/R/library/x86_64-w64-mingw32/3.0.2/bibtex/bibparse.output
State 0 conflicts: 3 shift/reduce
State 6 conflicts: 3 shift/reduce
State 29 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 92 conflicts: 3 shift/reduce


Grammar

    0 $accept: file $end

    1 file: opt_space
    2     | opt_space object_list opt_space

    3 object_list: object
    4            | object_list opt_space object

    5 object: TOKEN_AT opt_space at_object
    6       | anything opt_space object

    7 anything: TOKEN_ABBREV
    8         | TOKEN_COMMA
    9         | TOKEN_COMMENT
   10         | TOKEN_ENTRY
   11         | TOKEN_EQUALS
   12         | TOKEN_FIELD
   13         | TOKEN_INCLUDE
   14         | TOKEN_INLINE
   15         | TOKEN_KEY
   16         | TOKEN_LBRACE
   17         | TOKEN_LITERAL
   18         | TOKEN_NEWLINE
   19         | TOKEN_PREAMBLE
   20         | TOKEN_RBRACE
   21         | TOKEN_SHARP
   22         | TOKEN_SPACE
   23         | TOKEN_STRING
   24         | TOKEN_VALUE
   25         | TOKEN_UNKNOWN

   26 at_object: comment
   27          | entry
   28          | include
   29          | preamble
   30          | string
   31          | error TOKEN_RBRACE

   32 comment: TOKEN_COMMENT opt_space TOKEN_LITERAL

   33 entry: entry_head assignment_list TOKEN_RBRACE
   34      | entry_head assignment_list TOKEN_COMMA opt_space TOKEN_RBRACE
   35      | entry_head TOKEN_RBRACE

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space key_name opt_space TOKEN_COMMA opt_space
   37           | TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space TOKEN_COMMA opt_space

   38 key_name: TOKEN_KEY
   39         | TOKEN_ABBREV

   40 include: TOKEN_INCLUDE opt_space TOKEN_LITERAL

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE opt_space value opt_space TOKEN_RBRACE

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE opt_space assignment opt_space TOKEN_RBRACE

   43 value: simple_value
   44      | value opt_space TOKEN_SHARP opt_space simple_value

   45 simple_value: TOKEN_VALUE
   46             | TOKEN_ABBREV

   47 assignment_list: assignment
   48                | assignment_list TOKEN_COMMA opt_space assignment

   49 assignment: assignment_lhs opt_space TOKEN_EQUALS opt_space value opt_space

   50 assignment_lhs: TOKEN_FIELD
   51               | TOKEN_ABBREV

   52 opt_space: /* empty */
   53          | space

   54 space: single_space
   55      | space single_space

   56 single_space: TOKEN_SPACE
   57             | TOKEN_INLINE
   58             | TOKEN_NEWLINE


Terminals, with rules where they appear

$end (0) 0
error (256) 31
TOKEN_ABBREV (258) 7 39 46 51
TOKEN_AT (259) 5
TOKEN_COMMA (260) 8 34 36 37 48
TOKEN_COMMENT (261) 9 32
TOKEN_ENTRY (262) 10 36 37
TOKEN_EQUALS (263) 11 49
TOKEN_FIELD (264) 12 50
TOKEN_INCLUDE (265) 13 40
TOKEN_INLINE (266) 14 57
TOKEN_KEY (267) 15 38
TOKEN_LBRACE (268) 16 36 37 41 42
TOKEN_LITERAL (269) 17 32 40
TOKEN_NEWLINE (270) 18 58
TOKEN_PREAMBLE (271) 19 41
TOKEN_RBRACE (272) 20 31 33 34 35 41 42
TOKEN_SHARP (273) 21 44
TOKEN_SPACE (274) 22 56
TOKEN_STRING (275) 23 42
TOKEN_VALUE (276) 24 45
TOKEN_UNKNOWN (277) 25


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
file (24)
    on left: 1 2, on right: 0
object_list (25)
    on left: 3 4, on right: 2 4
object (26)
    on left: 5 6, on right: 3 4 6
anything (27)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25,
    on right: 6
at_object (28)
    on left: 26 27 28 29 30 31, on right: 5
comment (29)
    on left: 32, on right: 26
entry (30)
    on left: 33 34 35, on right: 27
entry_head (31)
    on left: 36 37, on right: 33 34 35
key_name (32)
    on left: 38 39, on right: 36
include (33)
    on left: 40, on right: 28
preamble (34)
    on left: 41, on right: 29
string (35)
    on left: 42, on right: 30
value (36)
    on left: 43 44, on right: 41 44 49
simple_value (37)
    on left: 45 46, on right: 43 44
assignment_list (38)
    on left: 47 48, on right: 33 34 48
assignment (39)
    on left: 49, on right: 42 47 48
assignment_lhs (40)
    on left: 50 51, on right: 49
opt_space (41)
    on left: 52 53, on right: 1 2 4 5 6 32 34 36 37 40 41 42 44 48
    49
space (42)
    on left: 54 55, on right: 53 55
single_space (43)
    on left: 56 57 58, on right: 54 55


State 0

    0 $accept: . file $end

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    TOKEN_INLINE   [reduce using rule 52 (opt_space)]
    TOKEN_NEWLINE  [reduce using rule 52 (opt_space)]
    TOKEN_SPACE    [reduce using rule 52 (opt_space)]
    $default       reduce using rule 52 (opt_space)

    file          go to state 4
    opt_space     go to state 5
    space         go to state 6
    single_space  go to state 7


State 1

   57 single_space: TOKEN_INLINE .

    $default  reduce using rule 57 (single_space)


State 2

   58 single_space: TOKEN_NEWLINE .

    $default  reduce using rule 58 (single_space)


State 3

   56 single_space: TOKEN_SPACE .

    $default  reduce using rule 56 (single_space)


State 4

    0 $accept: file . $end

    $end  shift, and go to state 8


State 5

    1 file: opt_space .
    2     | opt_space . object_list opt_space

    TOKEN_ABBREV    shift, and go to state 9
    TOKEN_AT        shift, and go to state 10
    TOKEN_COMMA     shift, and go to state 11
    TOKEN_COMMENT   shift, and go to state 12
    TOKEN_ENTRY     shift, and go to state 13
    TOKEN_EQUALS    shift, and go to state 14
    TOKEN_FIELD     shift, and go to state 15
    TOKEN_INCLUDE   shift, and go to state 16
    TOKEN_INLINE    shift, and go to state 17
    TOKEN_KEY       shift, and go to state 18
    TOKEN_LBRACE    shift, and go to state 19
    TOKEN_LITERAL   shift, and go to state 20
    TOKEN_NEWLINE   shift, and go to state 21
    TOKEN_PREAMBLE  shift, and go to state 22
    TOKEN_RBRACE    shift, and go to state 23
    TOKEN_SHARP     shift, and go to state 24
    TOKEN_SPACE     shift, and go to state 25
    TOKEN_STRING    shift, and go to state 26
    TOKEN_VALUE     shift, and go to state 27
    TOKEN_UNKNOWN   shift, and go to state 28

    $default  reduce using rule 1 (file)

    object_list  go to state 29
    object       go to state 30
    anything     go to state 31


State 6

   53 opt_space: space .
   55 space: space . single_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    TOKEN_INLINE   [reduce using rule 53 (opt_space)]
    TOKEN_NEWLINE  [reduce using rule 53 (opt_space)]
    TOKEN_SPACE    [reduce using rule 53 (opt_space)]
    $default       reduce using rule 53 (opt_space)

    single_space  go to state 32


State 7

   54 space: single_space .

    $default  reduce using rule 54 (space)


State 8

    0 $accept: file $end .

    $default  accept


State 9

    7 anything: TOKEN_ABBREV .

    $default  reduce using rule 7 (anything)


State 10

    5 object: TOKEN_AT . opt_space at_object

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 33
    space         go to state 6
    single_space  go to state 7


State 11

    8 anything: TOKEN_COMMA .

    $default  reduce using rule 8 (anything)


State 12

    9 anything: TOKEN_COMMENT .

    $default  reduce using rule 9 (anything)


State 13

   10 anything: TOKEN_ENTRY .

    $default  reduce using rule 10 (anything)


State 14

   11 anything: TOKEN_EQUALS .

    $default  reduce using rule 11 (anything)


State 15

   12 anything: TOKEN_FIELD .

    $default  reduce using rule 12 (anything)


State 16

   13 anything: TOKEN_INCLUDE .

    $default  reduce using rule 13 (anything)


State 17

   14 anything: TOKEN_INLINE .

    $default  reduce using rule 14 (anything)


State 18

   15 anything: TOKEN_KEY .

    $default  reduce using rule 15 (anything)


State 19

   16 anything: TOKEN_LBRACE .

    $default  reduce using rule 16 (anything)


State 20

   17 anything: TOKEN_LITERAL .

    $default  reduce using rule 17 (anything)


State 21

   18 anything: TOKEN_NEWLINE .

    $default  reduce using rule 18 (anything)


State 22

   19 anything: TOKEN_PREAMBLE .

    $default  reduce using rule 19 (anything)


State 23

   20 anything: TOKEN_RBRACE .

    $default  reduce using rule 20 (anything)


State 24

   21 anything: TOKEN_SHARP .

    $default  reduce using rule 21 (anything)


State 25

   22 anything: TOKEN_SPACE .

    $default  reduce using rule 22 (anything)


State 26

   23 anything: TOKEN_STRING .

    $default  reduce using rule 23 (anything)


State 27

   24 anything: TOKEN_VALUE .

    $default  reduce using rule 24 (anything)


State 28

   25 anything: TOKEN_UNKNOWN .

    $default  reduce using rule 25 (anything)


State 29

    2 file: opt_space object_list . opt_space
    4 object_list: object_list . opt_space object

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    TOKEN_INLINE   [reduce using rule 52 (opt_space)]
    TOKEN_NEWLINE  [reduce using rule 52 (opt_space)]
    TOKEN_SPACE    [reduce using rule 52 (opt_space)]
    $default       reduce using rule 52 (opt_space)

    opt_space     go to state 34
    space         go to state 6
    single_space  go to state 7


State 30

    3 object_list: object .

    $default  reduce using rule 3 (object_list)


State 31

    6 object: anything . opt_space object

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    TOKEN_INLINE   [reduce using rule 52 (opt_space)]
    TOKEN_NEWLINE  [reduce using rule 52 (opt_space)]
    TOKEN_SPACE    [reduce using rule 52 (opt_space)]
    $default       reduce using rule 52 (opt_space)

    opt_space     go to state 35
    space         go to state 6
    single_space  go to state 7


State 32

   55 space: space single_space .

    $default  reduce using rule 55 (space)


State 33

    5 object: TOKEN_AT opt_space . at_object

    error           shift, and go to state 36
    TOKEN_COMMENT   shift, and go to state 37
    TOKEN_ENTRY     shift, and go to state 38
    TOKEN_INCLUDE   shift, and go to state 39
    TOKEN_PREAMBLE  shift, and go to state 40
    TOKEN_STRING    shift, and go to state 41

    at_object   go to state 42
    comment     go to state 43
    entry       go to state 44
    entry_head  go to state 45
    include     go to state 46
    preamble    go to state 47
    string      go to state 48


State 34

    2 file: opt_space object_list opt_space .
    4 object_list: object_list opt_space . object

    TOKEN_ABBREV    shift, and go to state 9
    TOKEN_AT        shift, and go to state 10
    TOKEN_COMMA     shift, and go to state 11
    TOKEN_COMMENT   shift, and go to state 12
    TOKEN_ENTRY     shift, and go to state 13
    TOKEN_EQUALS    shift, and go to state 14
    TOKEN_FIELD     shift, and go to state 15
    TOKEN_INCLUDE   shift, and go to state 16
    TOKEN_INLINE    shift, and go to state 17
    TOKEN_KEY       shift, and go to state 18
    TOKEN_LBRACE    shift, and go to state 19
    TOKEN_LITERAL   shift, and go to state 20
    TOKEN_NEWLINE   shift, and go to state 21
    TOKEN_PREAMBLE  shift, and go to state 22
    TOKEN_RBRACE    shift, and go to state 23
    TOKEN_SHARP     shift, and go to state 24
    TOKEN_SPACE     shift, and go to state 25
    TOKEN_STRING    shift, and go to state 26
    TOKEN_VALUE     shift, and go to state 27
    TOKEN_UNKNOWN   shift, and go to state 28

    $default  reduce using rule 2 (file)

    object    go to state 49
    anything  go to state 31


State 35

    6 object: anything opt_space . object

    TOKEN_ABBREV    shift, and go to state 9
    TOKEN_AT        shift, and go to state 10
    TOKEN_COMMA     shift, and go to state 11
    TOKEN_COMMENT   shift, and go to state 12
    TOKEN_ENTRY     shift, and go to state 13
    TOKEN_EQUALS    shift, and go to state 14
    TOKEN_FIELD     shift, and go to state 15
    TOKEN_INCLUDE   shift, and go to state 16
    TOKEN_INLINE    shift, and go to state 17
    TOKEN_KEY       shift, and go to state 18
    TOKEN_LBRACE    shift, and go to state 19
    TOKEN_LITERAL   shift, and go to state 20
    TOKEN_NEWLINE   shift, and go to state 21
    TOKEN_PREAMBLE  shift, and go to state 22
    TOKEN_RBRACE    shift, and go to state 23
    TOKEN_SHARP     shift, and go to state 24
    TOKEN_SPACE     shift, and go to state 25
    TOKEN_STRING    shift, and go to state 26
    TOKEN_VALUE     shift, and go to state 27
    TOKEN_UNKNOWN   shift, and go to state 28

    object    go to state 50
    anything  go to state 31


State 36

   31 at_object: error . TOKEN_RBRACE

    TOKEN_RBRACE  shift, and go to state 51


State 37

   32 comment: TOKEN_COMMENT . opt_space TOKEN_LITERAL

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 52
    space         go to state 6
    single_space  go to state 7


State 38

   36 entry_head: TOKEN_ENTRY . opt_space TOKEN_LBRACE opt_space key_name opt_space TOKEN_COMMA opt_space
   37           | TOKEN_ENTRY . opt_space TOKEN_LBRACE opt_space TOKEN_COMMA opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 53
    space         go to state 6
    single_space  go to state 7


State 39

   40 include: TOKEN_INCLUDE . opt_space TOKEN_LITERAL

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 54
    space         go to state 6
    single_space  go to state 7


State 40

   41 preamble: TOKEN_PREAMBLE . opt_space TOKEN_LBRACE opt_space value opt_space TOKEN_RBRACE

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 55
    space         go to state 6
    single_space  go to state 7


State 41

   42 string: TOKEN_STRING . opt_space TOKEN_LBRACE opt_space assignment opt_space TOKEN_RBRACE

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 56
    space         go to state 6
    single_space  go to state 7


State 42

    5 object: TOKEN_AT opt_space at_object .

    $default  reduce using rule 5 (object)


State 43

   26 at_object: comment .

    $default  reduce using rule 26 (at_object)


State 44

   27 at_object: entry .

    $default  reduce using rule 27 (at_object)


State 45

   33 entry: entry_head . assignment_list TOKEN_RBRACE
   34      | entry_head . assignment_list TOKEN_COMMA opt_space TOKEN_RBRACE
   35      | entry_head . TOKEN_RBRACE

    TOKEN_ABBREV  shift, and go to state 57
    TOKEN_FIELD   shift, and go to state 58
    TOKEN_RBRACE  shift, and go to state 59

    assignment_list  go to state 60
    assignment       go to state 61
    assignment_lhs   go to state 62


State 46

   28 at_object: include .

    $default  reduce using rule 28 (at_object)


State 47

   29 at_object: preamble .

    $default  reduce using rule 29 (at_object)


State 48

   30 at_object: string .

    $default  reduce using rule 30 (at_object)


State 49

    4 object_list: object_list opt_space object .

    $default  reduce using rule 4 (object_list)


State 50

    6 object: anything opt_space object .

    $default  reduce using rule 6 (object)


State 51

   31 at_object: error TOKEN_RBRACE .

    $default  reduce using rule 31 (at_object)


State 52

   32 comment: TOKEN_COMMENT opt_space . TOKEN_LITERAL

    TOKEN_LITERAL  shift, and go to state 63


State 53

   36 entry_head: TOKEN_ENTRY opt_space . TOKEN_LBRACE opt_space key_name opt_space TOKEN_COMMA opt_space
   37           | TOKEN_ENTRY opt_space . TOKEN_LBRACE opt_space TOKEN_COMMA opt_space

    TOKEN_LBRACE  shift, and go to state 64


State 54

   40 include: TOKEN_INCLUDE opt_space . TOKEN_LITERAL

    TOKEN_LITERAL  shift, and go to state 65


State 55

   41 preamble: TOKEN_PREAMBLE opt_space . TOKEN_LBRACE opt_space value opt_space TOKEN_RBRACE

    TOKEN_LBRACE  shift, and go to state 66


State 56

   42 string: TOKEN_STRING opt_space . TOKEN_LBRACE opt_space assignment opt_space TOKEN_RBRACE

    TOKEN_LBRACE  shift, and go to state 67


State 57

   51 assignment_lhs: TOKEN_ABBREV .

    $default  reduce using rule 51 (assignment_lhs)


State 58

   50 assignment_lhs: TOKEN_FIELD .

    $default  reduce using rule 50 (assignment_lhs)


State 59

   35 entry: entry_head TOKEN_RBRACE .

    $default  reduce using rule 35 (entry)


State 60

   33 entry: entry_head assignment_list . TOKEN_RBRACE
   34      | entry_head assignment_list . TOKEN_COMMA opt_space TOKEN_RBRACE
   48 assignment_list: assignment_list . TOKEN_COMMA opt_space assignment

    TOKEN_COMMA   shift, and go to state 68
    TOKEN_RBRACE  shift, and go to state 69


State 61

   47 assignment_list: assignment .

    $default  reduce using rule 47 (assignment_list)


State 62

   49 assignment: assignment_lhs . opt_space TOKEN_EQUALS opt_space value opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 70
    space         go to state 6
    single_space  go to state 7


State 63

   32 comment: TOKEN_COMMENT opt_space TOKEN_LITERAL .

    $default  reduce using rule 32 (comment)


State 64

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE . opt_space key_name opt_space TOKEN_COMMA opt_space
   37           | TOKEN_ENTRY opt_space TOKEN_LBRACE . opt_space TOKEN_COMMA opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 71
    space         go to state 6
    single_space  go to state 7


State 65

   40 include: TOKEN_INCLUDE opt_space TOKEN_LITERAL .

    $default  reduce using rule 40 (include)


State 66

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE . opt_space value opt_space TOKEN_RBRACE

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 72
    space         go to state 6
    single_space  go to state 7


State 67

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE . opt_space assignment opt_space TOKEN_RBRACE

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 73
    space         go to state 6
    single_space  go to state 7


State 68

   34 entry: entry_head assignment_list TOKEN_COMMA . opt_space TOKEN_RBRACE
   48 assignment_list: assignment_list TOKEN_COMMA . opt_space assignment

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 74
    space         go to state 6
    single_space  go to state 7


State 69

   33 entry: entry_head assignment_list TOKEN_RBRACE .

    $default  reduce using rule 33 (entry)


State 70

   49 assignment: assignment_lhs opt_space . TOKEN_EQUALS opt_space value opt_space

    TOKEN_EQUALS  shift, and go to state 75


State 71

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space . key_name opt_space TOKEN_COMMA opt_space
   37           | TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space . TOKEN_COMMA opt_space

    TOKEN_ABBREV  shift, and go to state 76
    TOKEN_COMMA   shift, and go to state 77
    TOKEN_KEY     shift, and go to state 78

    key_name  go to state 79


State 72

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE opt_space . value opt_space TOKEN_RBRACE

    TOKEN_ABBREV  shift, and go to state 80
    TOKEN_VALUE   shift, and go to state 81

    value         go to state 82
    simple_value  go to state 83


State 73

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE opt_space . assignment opt_space TOKEN_RBRACE

    TOKEN_ABBREV  shift, and go to state 57
    TOKEN_FIELD   shift, and go to state 58

    assignment      go to state 84
    assignment_lhs  go to state 62


State 74

   34 entry: entry_head assignment_list TOKEN_COMMA opt_space . TOKEN_RBRACE
   48 assignment_list: assignment_list TOKEN_COMMA opt_space . assignment

    TOKEN_ABBREV  shift, and go to state 57
    TOKEN_FIELD   shift, and go to state 58
    TOKEN_RBRACE  shift, and go to state 85

    assignment      go to state 86
    assignment_lhs  go to state 62


State 75

   49 assignment: assignment_lhs opt_space TOKEN_EQUALS . opt_space value opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 87
    space         go to state 6
    single_space  go to state 7


State 76

   39 key_name: TOKEN_ABBREV .

    $default  reduce using rule 39 (key_name)


State 77

   37 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space TOKEN_COMMA . opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 88
    space         go to state 6
    single_space  go to state 7


State 78

   38 key_name: TOKEN_KEY .

    $default  reduce using rule 38 (key_name)


State 79

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space key_name . opt_space TOKEN_COMMA opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 89
    space         go to state 6
    single_space  go to state 7


State 80

   46 simple_value: TOKEN_ABBREV .

    $default  reduce using rule 46 (simple_value)


State 81

   45 simple_value: TOKEN_VALUE .

    $default  reduce using rule 45 (simple_value)


State 82

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE opt_space value . opt_space TOKEN_RBRACE
   44 value: value . opt_space TOKEN_SHARP opt_space simple_value

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 90
    space         go to state 6
    single_space  go to state 7


State 83

   43 value: simple_value .

    $default  reduce using rule 43 (value)


State 84

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE opt_space assignment . opt_space TOKEN_RBRACE

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 91
    space         go to state 6
    single_space  go to state 7


State 85

   34 entry: entry_head assignment_list TOKEN_COMMA opt_space TOKEN_RBRACE .

    $default  reduce using rule 34 (entry)


State 86

   48 assignment_list: assignment_list TOKEN_COMMA opt_space assignment .

    $default  reduce using rule 48 (assignment_list)


State 87

   49 assignment: assignment_lhs opt_space TOKEN_EQUALS opt_space . value opt_space

    TOKEN_ABBREV  shift, and go to state 80
    TOKEN_VALUE   shift, and go to state 81

    value         go to state 92
    simple_value  go to state 83


State 88

   37 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space TOKEN_COMMA opt_space .

    $default  reduce using rule 37 (entry_head)


State 89

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space key_name opt_space . TOKEN_COMMA opt_space

    TOKEN_COMMA  shift, and go to state 93


State 90

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE opt_space value opt_space . TOKEN_RBRACE
   44 value: value opt_space . TOKEN_SHARP opt_space simple_value

    TOKEN_RBRACE  shift, and go to state 94
    TOKEN_SHARP   shift, and go to state 95


State 91

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE opt_space assignment opt_space . TOKEN_RBRACE

    TOKEN_RBRACE  shift, and go to state 96


State 92

   44 value: value . opt_space TOKEN_SHARP opt_space simple_value
   49 assignment: assignment_lhs opt_space TOKEN_EQUALS opt_space value . opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    TOKEN_INLINE   [reduce using rule 52 (opt_space)]
    TOKEN_NEWLINE  [reduce using rule 52 (opt_space)]
    TOKEN_SPACE    [reduce using rule 52 (opt_space)]
    $default       reduce using rule 52 (opt_space)

    opt_space     go to state 97
    space         go to state 6
    single_space  go to state 7


State 93

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space key_name opt_space TOKEN_COMMA . opt_space

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 98
    space         go to state 6
    single_space  go to state 7


State 94

   41 preamble: TOKEN_PREAMBLE opt_space TOKEN_LBRACE opt_space value opt_space TOKEN_RBRACE .

    $default  reduce using rule 41 (preamble)


State 95

   44 value: value opt_space TOKEN_SHARP . opt_space simple_value

    TOKEN_INLINE   shift, and go to state 1
    TOKEN_NEWLINE  shift, and go to state 2
    TOKEN_SPACE    shift, and go to state 3

    $default  reduce using rule 52 (opt_space)

    opt_space     go to state 99
    space         go to state 6
    single_space  go to state 7


State 96

   42 string: TOKEN_STRING opt_space TOKEN_LBRACE opt_space assignment opt_space TOKEN_RBRACE .

    $default  reduce using rule 42 (string)


State 97

   44 value: value opt_space . TOKEN_SHARP opt_space simple_value
   49 assignment: assignment_lhs opt_space TOKEN_EQUALS opt_space value opt_space .

    TOKEN_SHARP  shift, and go to state 95

    $default  reduce using rule 49 (assignment)


State 98

   36 entry_head: TOKEN_ENTRY opt_space TOKEN_LBRACE opt_space key_name opt_space TOKEN_COMMA opt_space .

    $default  reduce using rule 36 (entry_head)


State 99

   44 value: value opt_space TOKEN_SHARP opt_space . simple_value

    TOKEN_ABBREV  shift, and go to state 80
    TOKEN_VALUE   shift, and go to state 81

    simple_value  go to state 100


State 100

   44 value: value opt_space TOKEN_SHARP opt_space simple_value .

    $default  reduce using rule 44 (value)
